Image: Fix widths for images wrapped in links.

--- a/widgets/image/styles/default.less
+++ b/widgets/image/styles/default.less
@@ -22,6 +22,10 @@
 		justify-content: center;
 	}
 
+	> a {
+		width: @image_width;
+	}
+
 	.so-widget-image {
 		display: block;
 		max-width: @image_max_width;
